# backend-django

./: .gitignore  manage.py  mini_ecommerce.sql  pyproject.toml  readme.md  requirements.txt  test.html
config/: asgi.py  urls.py  wsgi.py
config/settings/: common.py  development.py  production.py  staging.py
orders/: models.py
orders/api/: serializers.py  urls.py  views.py
products/: models.py
products/api/: serializers.py  urls.py  views.py
templates/: index.html
users/: admin.py  models.py
users/api/: serializers.py  urls.py  views.py
utils/: mixins.py
